# A.I.-AUTOTRADER23

./: README.md  main.py  pyproject.toml  requirements.txt
alpaca_only_api/: alpaca.py
alpaca_only_api/strategies/: daily_losers.py
src/: alpaca.py
src/sources/: article_extractor.py  marketaux.py  openai.py  slack.py  yahoo.py
src/strategies/: daily_losers.py
txcode_alpaca_strategies/: alpaca.py
txcode_alpaca_strategies/sources/: article_extractor.py
txcode_alpaca_strategies/strategies/: daily_losers.py
